# holidays-rs

./: Cargo.toml  build.rs  countries.csv  gen.py  holidays.csv  holidays.csv.hash  pyproject.toml
examples/: iter.rs  simple.rs
src/: country.rs  data.rs  date.rs  lib.rs  query.rs
