[package]
name = "holidays"
version = "0.1.0"
edition = "2021"
description = "Rust library to provide accurate and up-to-date holiday dates based on Python holidays package"
readme = "README.md"
homepage = "https://github.com/mapbox-jp/holidays-rs"
repository = "https://github.com/mapbox-jp/holidays-rs"
license = "MIT"
keywords = ["holiday", "date", "time"]
categories = ["date-and-time"]

[dependencies]
thiserror = "2.0"
phf_shared = "0.12"
phf = { version = "0.12", features = ["macros"] }

chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }

[build-dependencies]
phf = { version = "0.12", default-features = false }
phf_codegen = "0.12"
phf_shared = "0.12"
csv = "1.3"

[features]
default = ["all-countries", "chrono", "time"]

chrono = ["dep:chrono"]
time = ["dep:time"]

# Must be last
all-countries = [
  "AE",
  "AM",
  "AO",
  "AR",
  "AT",
  "AU",
  "AW",
  "AZ",
  "BA",
  "BD",
  "BE",
  "BG",
  "BI",
  "BO",
  "BR",
  "BW",
  "BY",
  "CA",
  "CH",
  "CL",
  "CN",
  "CO",
  "CU",
  "CW",
  "CY",
  "CZ",
  "DE",
  "DJ",
  "DK",
  "DO",
  "EE",
  "EG",
  "ES",
  "ET",
  "FI",
  "FR",
  "GB",
  "GE",
  "GR",
  "HK",
  "HN",
  "HR",
  "HU",
  "ID",
  "IE",
  "IL",
  "IM",
  "IN",
  "IS",
  "IT",
  "JM",
  "JP",
  "KE",
  "KR",
  "KZ",
  "LI",
  "LS",
  "LT",
  "LU",
  "LV",
  "MA",
  "MD",
  "MG",
  "MK",
  "MT",
  "MW",
  "MX",
  "MY",
  "MZ",
  "NA",
  "NG",
  "NI",
  "NL",
  "NO",
  "NZ",
  "PE",
  "PK",
  "PL",
  "PT",
  "PY",
  "RO",
  "RS",
  "RU",
  "SA",
  "SE",
  "SG",
  "SI",
  "SK",
  "SZ",
  "TN",
  "TR",
  "TW",
  "UA",
  "US",
  "UY",
  "UZ",
  "VE",
  "VN",
  "ZA",
  "ZM",
  "ZW"
]

AE = []
AM = []
AO = []
AR = []
AT = []
AU = []
AW = []
AZ = []
BA = []
BD = []
BE = []
BG = []
BI = []
BO = []
BR = []
BW = []
BY = []
CA = []
CH = []
CL = []
CN = []
CO = []
CU = []
CW = []
CY = []
CZ = []
DE = []
DJ = []
DK = []
DO = []
EE = []
EG = []
ES = []
ET = []
FI = []
FR = []
GB = []
GE = []
GR = []
HK = []
HN = []
HR = []
HU = []
ID = []
IE = []
IL = []
IM = []
IN = []
IS = []
IT = []
JM = []
JP = []
KE = []
KR = []
KZ = []
LI = []
LS = []
LT = []
LU = []
LV = []
MA = []
MD = []
MG = []
MK = []
MT = []
MW = []
MX = []
MY = []
MZ = []
NA = []
NG = []
NI = []
NL = []
NO = []
NZ = []
PE = []
PK = []
PL = []
PT = []
PY = []
RO = []
RS = []
RU = []
SA = []
SE = []
SG = []
SI = []
SK = []
SZ = []
TN = []
TR = []
TW = []
UA = []
US = []
UY = []
UZ = []
VE = []
VN = []
ZA = []
ZM = []
ZW = []
